<resources>
    <string name="app_name">SmartScale App</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="login">Anmelden</string>
    <string name="register">Registrieren</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="mail">Email</string>
    <string name="password_repeat">Passwort wiederholen</string>
    <string name="birthday">Geburtstag</string>
    <string name="target_weigth">65kg</string>
    <string name="target_steps">20000 Schritte</string>
    <string name="progress">Fortschritt</string>
    <string name="bmi">Dein BMI: 20 (Ideal)</string>
</resources>
