<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_smartscale"
        tools:ignore="VectorDrawableCompat" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/firstname_register"
        app:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nachname_register"
        app:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/mail_register"
        app:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_register"
        app:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_repeat_register"
        app:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_repeat"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:onClick="showDatePickerDialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="left"/>

</LinearLayout>